--- a/examples/index.html
+++ b/examples/index.html
@@ -13,6 +13,18 @@
 
         <div class="content">
 
+            <div class="card">
+                <h2>What is XXXXX?</h2>
+                <p>TODO</p>
+
+                <h2>Why/when should you use it?</h2>
+                <p>TODO</p>
+            </div>
+
+            <div>
+                output canvas
+            </div>
+
         </div>
         
         <script type="text/javascript">
