--- a/examples/DEFAULT.html
+++ b/examples/DEFAULT.html
@@ -7,7 +7,7 @@
     <body>
         
         <header>
-            <h1>EXAMPLE_NAME</h1>
+            <h1>Geolocation</h1>
             <p><a href="../index.html">Return to Main Menu</a></p>
         </header>
 
