--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
         <header>
             <h1><strong>JavaScript Does THAT!?</strong> Examples</h1>
             <p>As featured in <a href="https://www.brandonbruno.com/#speaking" target="_blank"><strong>JavaScript Does THAT!? TODO_TODO_TODO</strong></a> by <a href="https://www.brandonbruno.com" target="_blank">Brandon Bruno</a></p>
-            <p>This source code is <a href="https://github.com/bmbruno/js-reallygood-demo" target="_blank">available on GitHub</a>.</p>
+            <br/>
+            <p>This source code is <a href="https://github.com/bmbruno/js-does-that" target="_blank">available on GitHub</a>.</p>
         </header>
 
         <div class="content">
 
             <div class="card">
                 <h2>FEATURE</h2>
-                <p><a href="examples/XXXXXX.html">View Geolocation Example</a></p>
+                <p><a href="examples/geolocation.html">View Geolocation Example</a></p>
+                <p>DESCRIPTION</p>
+            </div>
+
+            <div class="card">
+                <h2>FEATURE</h2>
+                <p><a href="examples/geolocation.html">View Geolocation Example</a></p>
                 <p>DESCRIPTION</p>
             </div>
 
