Added output window + code formatting. Standardized Demo card.

--- a/examples/geolocation.html
+++ b/examples/geolocation.html
@@ -21,8 +21,16 @@
                 <p>TODO</p>
             </div>
 
-            <div>
-                output canvas
+            <div class="card">
+                <h2>Demo: FeatureA</h2>
+
+                <button type="button" onclick="">Run Demo</button>
+                <p>asdfasdf sdaf sdfasd asfd</p>
+
+                <div class="output code">
+                    Coords: 15.342, -23.332
+                </div>
+
             </div>
 
         </div>
