Formatting updates. Added descriptions to geolocation example.

--- a/examples/_default.html
+++ b/examples/_default.html
@@ -3,6 +3,7 @@
         <title>JavaScript Does THAT!? Examples</title>
         <link href="base/main.css" type="text/css" rel="stylesheet" />
         <script type="text/javascript" src="base/demo.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
