Finished Geolocation information panel. Cleaned up index format.

--- a/examples/geolocation.html
+++ b/examples/geolocation.html
@@ -18,10 +18,10 @@
             <div class="card">
 
                 <h2>What is <span class="mono">geolocation</span>?</h2>
-                <p>Gets the current device's latitude/longitude coordinates. Also allows for </p>
+                <p>Gets the current device's latitude/longitude coordinates. Also allows for watching a device's location in realtime.</p>
 
-                <h2>When should you use <span class="mono">geolocation</span>?</h2>
-                <p>TODO</p>
+                <h2>Why should you use <span class="mono">geolocation</span>?</h2>
+                <p>To get hyper-accurate location information; useful for mapping, searching, and certain types of gaming.</p>
 
             </div>
 
