--- a/index.html
+++ b/index.html
@@ -16,14 +16,24 @@
         <div class="content">
 
             <div class="card">
-                <h2>FEATURE</h2>
-                <p><a href="examples/geolocation.html">View Geolocation Example</a></p>
-                <p>DESCRIPTION</p>
+                <h2><a href="examples/geolocation.html">Geolocation</a></h2>
+                <p>Gets the current device's latitude/longitude coordinates.</p>
             </div>
 
             <div class="card">
-                <h2>FEATURE</h2>
-                <p><a href="examples/geolocation.html">View Geolocation Example</a></p>
+                <h2><a href="examples/geolocation.html">Geolocation</a></h2>
+                <p>Gets the current device's latitude/longitude coordinates.</p>
+            </div>
+
+
+
+
+
+
+
+
+            <div class="card">
+                <h2><a href="examples/FEATURE.html">GEOLOCATION</a></h2>
                 <p>DESCRIPTION</p>
             </div>
 
