--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             </div>
 
             <div class="card">
-                <h2><a href="examples/geolocation.html">Geolocation</a></h2>
-                <p>Gets the current device's latitude/longitude coordinates.</p>
+                <h2><a href="examples/canvas.html">Canvas</a></h2>
+                <p>Provides 2D and 3D drawing capabilities.</p>
             </div>
 
 
