Tweaked Momentum logo. Added canvas descriptions.

--- a/examples/01-geolocation.html
+++ b/examples/01-geolocation.html
@@ -83,6 +83,10 @@
                 enableHighAccuracy: false
             }
 
+            //
+            // Demo: get a device's location
+            // 
+
             let getLocation = () => {
 
                 options.enableHighAccuracy = false;
@@ -98,7 +102,7 @@
             };
 
             //
-            // Watch a location for changes and update coords
+            // Demo: Watch a location for changes and update coords
             //
 
             // Process a successful location request
