--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <div class="content">
 
             <div class="card">
-                <h2><a href="examples/geolocation.html">Geolocation</a></h2>
+                <h2><a href="examples/01-geolocation.html">Geolocation</a></h2>
                 <p>Gets the current device's latitude/longitude coordinates.</p>
             </div>
 
             <div class="card">
-                <h2><a href="examples/canvas.html">Canvas</a></h2>
+                <h2><a href="examples/02-canvas.html">Canvas</a></h2>
                 <p>Provides 2D and 3D drawing capabilities.</p>
             </div>
 
