Cleaned up draw, update methods in CanvasGame.

--- a/examples/02-canvas.html
+++ b/examples/02-canvas.html
@@ -51,6 +51,7 @@
 
                 let canvas = document.getElementById("CanvasDemo");
                 let ctx = canvas.getContext("2d");
+                ctx.clearRect(0, 0, 400, 300);
 
                 ctx.lineWidth = 20;
 
@@ -111,6 +112,7 @@
 
                 let canvas = document.getElementById("CanvasDemo");
                 let ctx = canvas.getContext("2d");
+                ctx.clearRect(0, 0, 400, 300);
 
                 CanvasGame.run(canvas, ctx);
 
