Fixed gameloop to use requestAnimationFrame. updates to notification API.

--- a/examples/03-notifications.html
+++ b/examples/03-notifications.html
@@ -17,10 +17,10 @@
 
             <div class="card">
                 <h2>What is the <span class="mono">Notifications API</span>?</h2>
-                <p>TODO</p>
+                <p>Send browser- and device-native notifications from a website or webapp.</p>
 
                 <h2>When and why should you use the <span class="mono">Notifications API</span>?</h2>
-                <p>TODO</p>
+                <p>Notifications inform users of updates from your website - whether informational or transactional. Note that notifications require explicit opt-in from major browsers.</p>
             </div>
 
             <div class="card">
