--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
                 <h2><a href="examples/02-canvas.html">Canvas</a></h2>
                 <p>Provides 2D and 3D drawing capabilities.</p>
             </div>
-
+            
+            <div class="card">
+                <h2><a href="examples/FEATURE.html">GEOLOCATION</a></h2>
+                <p>DESCRIPTION</p>
+            </div>
 
 
 
