--- a/examples/02-canvas.html
+++ b/examples/02-canvas.html
@@ -114,7 +114,7 @@
                 let ctx = canvas.getContext("2d");
                 ctx.clearRect(0, 0, 400, 300);
 
-                CanvasGame.run(canvas, ctx);
+                Game.run(canvas, ctx);
 
             }
 
