--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </div>
             
             <div class="card">
-                <h2><a href="examples/FEATURE.html">GEOLOCATION</a></h2>
-                <p>DESCRIPTION</p>
+                <h2><a href="examples/03-notification.html">Notification</a></h2>
+                <p>Send browser- and device-native notifications from a website or webapp.</p>
             </div>
 
 
