Design tweaks. Fixed broken Geolocation link.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="content">
 
             <div class="card">
-                <h2><a href="examples/01-geolocation.html">Geolocation</a></h2>
+                <h2><a href="examples/01-geolocation/geolocation.html">Geolocation</a></h2>
                 <p>Gets the current device's latitude/longitude coordinates.</p>
             </div>
 
