Moved canvas demo to new file format.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             </div>
 
             <div class="card">
-                <h2><a href="examples/02-canvas.html">Canvas</a></h2>
-                <p>Provides 2D and 3D drawing capabilities.</p>
+                <h2><a href="examples/02-canvas/canvas.html">Canvas</a></h2>
+                <p>Provides primitive 2D and 3D drawing capabilities.</p>
             </div>
             
             <div class="card">
