Restructured individual demoes into unique cards.

--- a/examples/01-geolocation/geolocation.html
+++ b/examples/01-geolocation/geolocation.html
@@ -37,14 +37,22 @@
                 <button type="button" onclick="Demo.Geolocation.getLocationAccurate();">High Accuracy</button>
                 <p>Attempts to get a device's location with high accuracy. This may trigger the GPS module on a user's device and use considerable resources.</p>
 
+                
+
+            </div>
+
+            <div class="card">
+
                 <h2>Demo: watch a device's location in realtime</h2>
 
                 <button type="button" onclick="Demo.Geolocation.watchLocation();">Watch Location</button>
                 <button type="button" onclick="Demo.Geolocation.stopWatching();">Stop Watching</button>
                 <p>Calls the 'success' function every time the device's location changes.</p>
 
-                <div id="Console" class="output code"></div>
+            </div>
 
+            <div class="card">
+                <div id="Console" class="output code"></div>
             </div>
 
         </div>
