Moved notification demo to new file format.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             
             <div class="card">
-                <h2><a href="examples/03-notification.html">Notification</a></h2>
+                <h2><a href="examples/03-notifications/notifications.html">Notifications</a></h2>
                 <p>Send browser- and device-native notifications from a website or webapp.</p>
             </div>
 
