Updated canvas example to new card layout.

--- a/examples/02-canvas/canvas.html
+++ b/examples/02-canvas/canvas.html
@@ -27,17 +27,20 @@
                 <p>This contrasts with the more complex WebGL API, which provides hardware accelerated graphics rendering at the expense of implementation simplicity.</p>
             </div>
 
-            <div class="card" style="overflow: auto;">
+            <div class="card">
                 <h2>Demo: drawing primitives</h2>
                 <button type="button" onclick="Demo.Canvas.drawLogo();">Draw Logo</button>
+            </div>
 
+            <div class="card">
                 <h2>Demo: animate (TODO)</h2>
                 <button type="button" onclick="Demo.CanvasGame.start();">Start Animation</button>
+            </div>
                 
+            <div class="card" style="overflow: auto;">
                 <div style="text-align: center;">
                     <canvas id="CanvasDemo" width="400px" height="300px" style="border: 1px solid #000; border-radius: 4px; margin-top: 1em;"></canvas>
                 </div>
-
             </div>
 
         </div>
