Partial Web Worker demo 1 implementation.

--- a/examples/04-webworkers/webworkers.html
+++ b/examples/04-webworkers/webworkers.html
@@ -20,18 +20,18 @@
             <div class="card">
 
                 <h2>What are <span class="mono">Web Workers</span>?</h2>
-                <p></p>p>
+                <p>Provides background thread execution of JavaScript (in a separate file).</p>
 
-                <h2>Why should you use <span class="mono">geolocation</span>?</h2>
-                <p>To get hyper-accurate location information; useful for mapping, searching, and certain types of gaming.</p>
+                <h2>Why should you use <span class="mono">Web Workers</span>?</h2>
+                <p>Long-running code that may interfere with the browser's main thread (UI, etc.) can be moved to a web worker.</p>
 
             </div>
 
             <div class="card">
 
-                <h2>Demo: </h2>
+                <h2>Demo: create and send messages to a Web Worker</h2>
 
-                <button type="button" onclick="">DEMO_ACTION</button>
+                <button type="button" onclick="Demo.Webworkers.create();">DEMO_ACTION</button>
                 <p>DESCRIPTION</p>
                 
             </div>
