--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 <p>Send browser- and device-native notifications from a website or webapp.</p>
             </div>
 
+            <div class="card">
+                <h2><a href="examples/04-webworkers/webworkers.html">Web Workers</a></h2>
+                <p>Provides background thread execution of JavaScript (in a separate file).</p>
+            </div>
+
+
 
 
 
@@ -37,7 +43,7 @@
 
 
             <div class="card">
-                <h2><a href="examples/FEATURE.html">GEOLOCATION</a></h2>
+                <h2><a href="examples/00/FEATURE.html">GEOLOCATION</a></h2>
                 <p>DESCRIPTION</p>
             </div>
 
