Additional worker examples.

--- a/examples/04-webworkers/webworkers.html
+++ b/examples/04-webworkers/webworkers.html
@@ -29,11 +29,18 @@
 
             <div class="card">
 
-                <h2>Demo: create and send messages to a Web Worker</h2>
+                <h2>Demo: create pass messages to/from a Web Worker</h2>
 
                 <button type="button" onclick="Demo.Webworkers.create();">DEMO_ACTION</button>
-                <p>DESCRIPTION</p>
+                <p>Create a new worker ("worker.js"), send a message to it ("Hello, web worker!"), and receive a message back ("Hello, boring old JS thread.").</p>
                 
+            </div>
+
+            <div class="card">
+                
+                <h2>Demo: calculate prime numbers</h2>
+
+                <button type="button" onclick="Demo.Webworkers.calculatePrimes();">DEMO_ACTION</button>
             </div>
 
             <div class="card">
