--- a/examples/04-webworkers/webworkers.html
+++ b/examples/04-webworkers/webworkers.html
@@ -31,7 +31,7 @@
 
                 <h2>Demo: create pass messages to/from a Web Worker</h2>
 
-                <button type="button" onclick="Demo.Webworkers.create();">DEMO_ACTION</button>
+                <button type="button" onclick="Demo.Webworkers.create();">Create Worker</button>
                 <p>Create a new worker ("worker.js"), send a message to it ("Hello, web worker!"), and receive a message back ("Hello, boring old JS thread.").</p>
                 
             </div>
@@ -40,7 +40,10 @@
                 
                 <h2>Demo: calculate prime numbers</h2>
 
-                <button type="button" onclick="Demo.Webworkers.calculatePrimes();">DEMO_ACTION</button>
+                <div class="row">
+                    <input type="number" max="10000000" id="PrimeLimit" value="10000" /><label for="PrimeLimit" style="margin-left: 1em;">Prime Limit (max 10,000,000)</label><br/>
+                </div>
+                <button type="button" onclick="Demo.Webworkers.calculatePrimes();">Calculate</button>
             </div>
 
             <div class="card">
