--- a/examples/04-webworkers/webworkers.html
+++ b/examples/04-webworkers/webworkers.html
@@ -29,7 +29,7 @@
 
             <div class="card">
 
-                <h2>Demo: create pass messages to/from a Web Worker</h2>
+                <h2>Demo: pass messages to/from a Web Worker</h2>
 
                 <button type="button" onclick="Demo.Webworkers.create();">Create Worker</button>
                 <p>Create a new worker ("worker.js"), send a message to it ("Hello, web worker!"), and receive a message back ("Hello, boring old JS thread.").</p>
@@ -44,6 +44,17 @@
                     <input type="number" max="10000000" id="PrimeLimit" value="10000" /><label for="PrimeLimit" style="margin-left: 1em;">Prime Limit (max 10,000,000)</label><br/>
                 </div>
                 <button type="button" onclick="Demo.Webworkers.calculatePrimes();">Calculate</button>
+                <p>Because workers spawn in a new thread, long-running processes can execute without disrupting the browser event loop.</p>
+
+            </div>
+
+            <div class="card">
+
+                <h2>Demo: send a notifaction</h2>
+
+                <button type="button" onclick="Demo.Webworkers.sendNotification();">Send Notification</button>
+                <p>A long-running worker can act as a background process, handling things like notifications when necessary. This will trigger a device-native notification after five (5) seconds.</p>
+                
             </div>
 
             <div class="card">
