Cleaned up default folder. Stubbed out vibration demo.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
                 <p>Provides background thread execution of JavaScript (in a separate file).</p>
             </div>
 
+            <div class="card">
+                <h2><a href="examples/05-vibration/vibration.html">Vibration API</a></h2>
+                <p>DESCRIPTION</p>
+            </div>
+
+
+
 
 
 
