--- a/examples/00-DEFAULT/index.html
+++ b/examples/00-DEFAULT/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <script type="text/javascript" src="../base/demo.js"></script>
-        <script type="text/javascript" src="webworkers.js"></script>
+        <script type="text/javascript" src="XXXXXXXXXXXX.js"></script>
     </head>
 
     <body>
@@ -19,11 +19,11 @@
 
             <div class="card">
 
-                <h2>What are <span class="mono">Web Workers</span>?</h2>
-                <p></p>p>
+                <h2>What are <span class="mono">XXXXXXXXXXXX</span>?</h2>
+                <p></p>
 
-                <h2>Why should you use <span class="mono">geolocation</span>?</h2>
-                <p>To get hyper-accurate location information; useful for mapping, searching, and certain types of gaming.</p>
+                <h2>Why should you use <span class="mono">XXXXXXXXXXXX</span>?</h2>
+                <p>XXXXXXXXXXXX</p>
 
             </div>
 
