Initial implementation of vibration demo.

--- a/examples/05-vibration/vibration.html
+++ b/examples/05-vibration/vibration.html
@@ -29,9 +29,18 @@
 
             <div class="card">
 
-                <h2>Demo: </h2>
+                <h2>Demo: short vibration</h2>
 
-                <button type="button" onclick="">DEMO_ACTION</button>
+                <button type="button" onclick="Demo.Vibration.vibrate();">Vibrate</button>
+                <p>DESCRIPTION</p>
+                
+            </div>
+
+            <div class="card">
+
+                <h2>Demo: vibrate with a pattern</h2>
+
+                <button type="button" onclick="Demo.Vibration.vibratePattern();">Vibrate with pattern</button>
                 <p>DESCRIPTION</p>
                 
             </div>
