Stubbed out idle detection demo assets.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                 <p>DESCRIPTION</p>
             </div>
 
+            <div class="card">
+                <h2><a href="examples/06-idle-detection/idle.html">Idle Detection API</a></h2>
+                <p>Determines if a user is active or idle on a webpage.</p>
+            </div>
+
 
 
 
