Added idle detection Demo 1.

--- a/examples/06-idle-detection/idle.html
+++ b/examples/06-idle-detection/idle.html
@@ -31,7 +31,7 @@
 
                 <h2>Demo: request permission</h2>
 
-                <button type="button" onclick="">Request permission</button>
+                <button type="button" onclick="Demo.Idle.requestPermission();">Request permission</button>
                 <p>Requests permission from the user to monitor idle status.</p>
                 
             </div>
