Implemented idle status watch logic.

--- a/examples/06-idle-detection/idle.html
+++ b/examples/06-idle-detection/idle.html
@@ -37,6 +37,15 @@
             </div>
 
             <div class="card">
+
+                <h2>Demo: Monitor idle status</h2>
+
+                <button type="button" onclick="Demo.Idle.monitorIdle();">Monitor idle status</button>
+                <p></p>
+                
+            </div>
+
+            <div class="card">
                 <div id="Console" class="output code"></div>
             </div>
 
