Stubbed Gamepad API example.

--- a/examples/07-gamepad/gamepad.html
+++ b/examples/07-gamepad/gamepad.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <script type="text/javascript" src="../base/demo.js"></script>
-        <script type="text/javascript" src="XXXXXXXXXXXX.js"></script>
+        <script type="text/javascript" src="gamepad.js"></script>
     </head>
 
     <body>
         
         <header>
-            <h1>XXXXXXXXXXXX</h1>
+            <h1>Gamepad API</h1>
             <p><a href="../../index.html">Return to Main Menu</a></p>
         </header>
 
@@ -19,10 +19,10 @@
 
             <div class="card">
 
-                <h2>What is the <span class="mono">XXXXXXXXXXXX</span>?</h2>
+                <h2>What is the <span class="mono">Gamepad API</span>?</h2>
                 <p>XXXXXXXXXXXX</p>
 
-                <h2>Why should you use the <span class="mono">XXXXXXXXXXXX</span>?</h2>
+                <h2>Why should you use <span class="mono">Gamepad API</span>?</h2>
                 <p>XXXXXXXXXXXX</p>
 
             </div>
