--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
                 <p>Determines if a user is active or idle on a webpage.</p>
             </div>
 
+            <div class="card">
+                <h2><a href="examples/07-gamepad/gamepad.html">Gamepad API</a></h2>
+                <p>DESCRIPTION</p>
+            </div>
+
 
 
 
