Initial visibility implementation.

--- a/examples/09-page-visibility/page-visibility.html
+++ b/examples/09-page-visibility/page-visibility.html
@@ -19,20 +19,19 @@
 
             <div class="card">
 
-                <h2>What is the <span class="mono">XXXXXXXXXXXX</span>?</h2>
+                <h2>What is the <span class="mono">Visibility API</span>?</h2>
                 <p>XXXXXXXXXXXX</p>
 
-                <h2>Why should you use the <span class="mono">XXXXXXXXXXXX</span>?</h2>
+                <h2>Why should you use the <span class="mono">Visibility API</span>?</h2>
                 <p>XXXXXXXXXXXX</p>
 
             </div>
 
             <div class="card">
 
-                <h2>Demo: </h2>
+                <h2>Demo: update when the page visibility changes</h2>
 
-                <button type="button" onclick="">DEMO_ACTION</button>
-                <p>DESCRIPTION</p>
+                <p>XXXXXXXXX</p>
                 
             </div>
 
