--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
                 <p>DESCRIPTION</p>
             </div>
 
+            <div class="card">
+                <h2><a href="examples/08-inking/inking.html">Inking</a></h2>
+                <p>DESCRIPTION</p>
+            </div>
+
+            <div class="card">
+                <h2><a href="examples/09-page-visibility/page-visibility.html">Page Visibility</a></h2>
+                <p>DESCRIPTION</p>
+            </div>
+
 
 
 
